--- a/src/styles/collapse.css
+++ b/src/styles/collapse.css
@@ -5,7 +5,7 @@
 
 
 .collapse {
-    
+    margin: 2% 15% 0% 15%;
 }
 
 .collapseTitle {
@@ -17,34 +17,32 @@
     color: white;
     font-family: 'Montserrat', sans-serif;
     font-size: 25px;
-    margin: 2% 15% 0% 15%;
-    padding: 0 1%;
+    padding: 0 2%;
     border-radius: 5px;
 }
 
 .collapseText {
     position: relative;
     background-color: #F7F7F7;
-    margin: -10px 15% 0% 15%;
+    margin-top: -10px;
     z-index: -1;
     padding-top: 10px;
-    height: 100%;
     border-radius: 0 0px 5px 5px;
 }
 
 .collapseText li {
-        list-style: none;
-        color: #FF6060;
-        font-family: 'Montserrat', sans-serif;
-        font-size: 25px;
-        width: 90%;
-        padding: 0 0 20px 25px;
-        line-height: 20px;
+    list-style: none;
+    color: #FF6060;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 25px;
+    width: 90%;
+    padding: 0 0 20px 25px;
+    line-height: 20px;
 }
     
-    .collapseText li:first-child {
+.collapseText li:first-child {
     margin-top: 30px;
-    }
+}
 
 .collapseArrow {
     height: 25%;
@@ -58,4 +56,25 @@
     padding: 0 0 20px 25px;
     line-height: 40px;
 
+}
+
+/* Accommodation PAge */
+
+.accommodationCollapse {
+    margin: 0% 6% 0% 6%;
+    display: grid;
+    justify-items: center;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.collapseItem1 {
+    width: 95%;
+    min-width: 300px;
+    margin-right: 40px;
+}
+
+.collapseItem2 {
+    width: 95%;
+    min-width: 300px;
+    margin-left: 40px;
 }
